@@ -1,3 +1,12 @@
+2004-04-16  Boyd Timothy  <btimothy@novell.com>
+
+	* gdk/Global.custom : properties to expose window manager spec
+	properties.
+	* gdk/glue/windowmanager.c : glue to retrieve window manager props
+	using gdk_property_get.
+	* gdk/glue/Makefile.am : add new file.
+	* gdk/glue/makefile.win32 : add new file.
+
 2004-04-13  Mike Kestner  <mkestner@ximian.com>
 
 	* glib/Value.cs : fix a csc-breaker.
